[tool.poetry]
name = "nua-vagrant"
version = "0.1.0"
description = ""
authors = ["Stefane Fermigier <sf@fermigier.com>"]
#readme = "README.md"
#packages = [{include = "nua_vagrant"}]

[tool.poetry.dependencies]
python = "^3.11"

invoke = "^2.0.0"
watchfiles = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
